@@ -288,8 +288,89 @@
     </ul>
     <p class="second pages">  <strong>1</strong>  <a href="#">2</a> <a href="#">3</a> <a href="#">4</a> <a href="#">5</a> <a href="#" class="next"><span></span>Próxima</a> </p>
 
-    <div id="data_sheet"><h2>Ficha Técnica:</h2><ul><li>Noivos<dl><dt>Vestido e Véu:</dt><dd>Ateliê Ruth Guimarães <a href="#">www.ruthguimaraes.com.br</a></dd><dt>Grinalda:</dt><dd>Ateliê Ruth Guimarães <a href="#">www.ruthguimaraes.com.br</a></dd><dt>Cabelo:</dt><dd>Rosane e Érica da La Beaute</dd><dt>Maquiagem:</dt><dd>Rosane e Érica da La Beaute</dd><dt>Sapato:</dt><dd>Lidu (21-25471452)</dd><dt>Buquê:</dt><dd>Edla Barros <a href="#">www.edla.barros.nom.br</a></dd><dt>Jóias:</dt><dd>Amsterdam Sauer <a href="#">www.amsterdamsauer.com</a></dd><dt>Roupa do Noivo:</dt><dd>NightLine <a href="#">www.nightline.com.br</a></dd></dl></li><li>Cerimônia<dl><dt>Local:</dt><dd>Igreja Nossa Sra do Brasil, na Urca, RJ</dd><dt>Cerimonial:</dt><dd>Evento Atual <a href="#">www.eventoatual.com</a></dd><dt>Música:</dt><dd>Sra. Elce, música exclusiva da Igreja</dd><dt>Celebrante:</dt><dd>Padre Antônio José de Moares da Igreja Nossa Sra do Brasil</dd><dt>Decoração:</dt><dd>A Roseira (21-22252560)</dd><dt>Flores:</dt><dd>A Roseira (21-22252560)</dd><dt>Carro:</dt><dd>Jadiel Veículos</dd></dl></li><li>Festa<dl><dt>Casa de Festas:</dt><dd>Sociedade Hípica Brasileira <a href="#">www.shb.com.br</a></dd><dt>Decoração:</dt><dd>Noiva e Evento Atual <a href="#">www.eventoatual.com.br</a></dd><dt>Móveis:</dt><dd>Mineirart <a href="#">www.mineirart.com.br</a> e Lona Cristal <a href="#">www.lonacristaleventos.com.br</a></dd><dt>Lounge:</dt><dd>Mineirart <a href="#">www.mineirart.com.br</a></dd><dt>Flores:</dt><dd>Sharles Rafael <a href="#">www.sharlesrafael.com.br</a></dd><dt>Iluminação:</dt><dd>Omni Eventos <a href="#">www.omnieventos.com.br</a></dd><dt>Música:</dt><dd>DJ Reinaldo de Paula da Omni Eventos <a href="#">www.omnieventos.com.br</a></dd></dl></li><li>Delícias do Casamento<dl><dt>Buffet:</dt><dd>Maria Luísa Buffet (24-22439853)</dd><dt>Bolo:</dt><dd>Vera Andrade</dd><dt>Doces:</dt><dd>Frances e Louzieh</dd><dt>Chocolates:</dt><dd>Le Chocolat <a href="#">www.lechocolatbrasil.com.br</a></dd><dt>Bem-casados:</dt><dd>Elvira Bona (21-25470095)</dd></dl></li><li>Diversos<dl><dt>Fotografia:</dt><dd>Patricia Figueira e Karen Branta</dd><dt>Convite:</dt><dd>Dom Bosco <a href="#">www.convitesdombosco.com.br</a></dd></dl></li></ul></div>
-
+    <div id="data_sheet">
+      <h2>Ficha Técnica:</h2>
+      <ul>
+        <li>Noivos
+          <dl>
+            <dt>Vestido e Véu:</dt>
+            <dd>Ateliê Ruth Guimarães <a href="#">www.ruthguimaraes.com.br</a></dd>
+            <dt>Grinalda:</dt>
+            <dd>Ateliê Ruth Guimarães <a href="#">www.ruthguimaraes.com.br</a></dd>
+            <dt>Cabelo:</dt>
+            <dd>Rosane e Érica da La Beaute</dd>
+            <dt>Maquiagem:</dt>
+            <dd>Rosane e Érica da La Beaute</dd>
+            <dt>Sapato:</dt>
+            <dd>Lidu (21-25471452)</dd>
+            <dt>Buquê:</dt>
+            <dd>Edla Barros <a href="#">www.edla.barros.nom.br</a></dd>
+            <dt>Jóias:</dt>
+            <dd>Amsterdam Sauer <a href="#">www.amsterdamsauer.com</a></dd>
+            <dt>Roupa do Noivo:</dt>
+            <dd>NightLine <a href="#">www.nightline.com.br</a></dd>
+          </dl>
+        </li>
+        <li>Cerimônia
+          <dl>
+            <dt>Local:</dt>
+            <dd>Igreja Nossa Sra do Brasil, na Urca, RJ</dd>
+            <dt>Cerimonial:</dt>
+            <dd>Evento Atual <a href="#">www.eventoatual.com</a></dd>
+            <dt>Música:</dt>
+            <dd>Sra. Elce, música exclusiva da Igreja</dd>
+            <dt>Celebrante:</dt>
+            <dd>Padre Antônio José de Moares da Igreja Nossa Sra do Brasil</dd>
+            <dt>Decoração:</dt>
+            <dd>A Roseira (21-22252560)</dd>
+            <dt>Flores:</dt>
+            <dd>A Roseira (21-22252560)</dd>
+            <dt>Carro:</dt>
+            <dd>Jadiel Veículos</dd>
+          </dl>
+        </li>
+        <li>Festa
+          <dl>
+            <dt>Casa de Festas:</dt>
+            <dd>Sociedade Hípica Brasileira <a href="#">www.shb.com.br</a></dd>
+            <dt>Decoração:</dt>
+            <dd>Noiva e Evento Atual <a href="#">www.eventoatual.com.br</a></dd>
+            <dt>Móveis:</dt>
+            <dd>Mineirart <a href="#">www.mineirart.com.br</a> e Lona Cristal <a href="#">www.lonacristaleventos.com.br</a></dd>
+            <dt>Lounge:</dt>
+            <dd>Mineirart <a href="#">www.mineirart.com.br</a></dd>
+            <dt>Flores:</dt>
+            <dd>Sharles Rafael <a href="#">www.sharlesrafael.com.br</a></dd>
+            <dt>Iluminação:</dt>
+            <dd>Omni Eventos <a href="#">www.omnieventos.com.br</a></dd>
+            <dt>Música:</dt>
+            <dd>DJ Reinaldo de Paula da Omni Eventos <a href="#">www.omnieventos.com.br</a></dd>
+          </dl>
+        </li>
+        <li>Delícias do Casamento
+          <dl>
+            <dt>Buffet:</dt>
+            <dd>Maria Luísa Buffet (24-22439853)</dd>
+            <dt>Bolo:</dt>
+            <dd>Vera Andrade</dd>
+            <dt>Doces:</dt>
+            <dd>Frances e Louzieh</dd>
+            <dt>Chocolates:</dt>
+            <dd>Le Chocolat <a href="#">www.lechocolatbrasil.com.br</a></dd>
+            <dt>Bem-casados:</dt>
+            <dd>Elvira Bona (21-25470095)</dd>
+          </dl>
+        </li>
+        <li>Diversos
+          <dl>
+            <dt>Fotografia:</dt>
+            <dd>Patricia Figueira e Karen Branta</dd>
+            <dt>Convite:</dt>
+            <dd>Dom Bosco <a href="#">www.convitesdombosco.com.br</a></dd>
+          </dl>
+        </li>
+      </ul>
+    </div>
   </div>
   <hr />
   <div id='footer'>
